<resources>
    <string name="app_name">FairGo4</string>
    <string name="play">Play</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="how_to_play">How to play?</string>
    <string name="timer">Timer - %s:%s</string>
    <string name="level">Lvl - %s</string>
    <string name="mix_again">Mix again</string>
    <string name="question">\?</string>
    <string name="score">Score: %s</string>
    <string name="need">Need: %s</string>
</resources>