<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/default_bg">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/home_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        android:foreground="@drawable/button_8_ripple"
        android:background="#0000"
        app:srcCompat="@drawable/home_button"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingHorizontal="15dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:tag="timer"
        android:text="@string/timer"
        android:textSize="17sp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/jungle"
        android:fontFamily="@font/russo_one"
        android:background="@drawable/result_shape"/>

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingHorizontal="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:tag="fate"
        android:text="@string/level"
        android:textSize="17sp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/jungle"
        android:fontFamily="@font/russo_one"
        android:layout_gravity="end"
        android:background="@drawable/result_shape"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/pickes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <include layout="@layout/pickes"/>
        <include layout="@layout/pickes"/>
        <include layout="@layout/pickes"/>
        <include layout="@layout/pickes"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:text="@string/mix_again"
        android:textColor="@color/jungle"
        android:fontFamily="@font/russo_one"
        android:textSize="24sp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/button_enabled_shape"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/advice_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="20dp"
        android:text="@string/question"
        android:textColor="@color/jungle"
        android:fontFamily="@font/russo_one"
        android:textSize="24sp"
        android:layout_gravity="bottom"
        android:background="@drawable/button_8_selector"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingHorizontal="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:tag="timer"
        android:text="@string/score"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:textColor="@color/jungle"
        android:fontFamily="@font/russo_one"
        android:background="@drawable/result_shape"/>

    <TextView
        android:id="@+id/need"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingHorizontal="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:tag="timer"
        android:text="@string/need"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_gravity="bottom|end"
        android:textColor="@color/jungle"
        android:fontFamily="@font/russo_one"
        android:background="@drawable/result_shape"/>
</FrameLayout>